--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -6,17 +6,15 @@
       </div>
       <div class="defaultForecastDiv">
         <default-forecast
-          [defaultWeatherName]="TEMPdefaultWeatherName"
-          [defaultWeatherDetails]="TEMPdefaultWeatherDetails"
+          [defaultWeatherName]="defaultWeatherName"
+          [defaultWeatherDetails]="defaultWeatherDetails"
         ></default-forecast>
-        <addtofavorites
-        ></addtofavorites>
+        <addtofavorites></addtofavorites>
       </div>
     </div>
     <div class="lowerDiv">
       <div class="dailyForecastDiv">
-        <daily-forecast 
-        ></daily-forecast>
+        <daily-forecast></daily-forecast>
       </div>
     </div>
   </div>
