--- a/src/app/components/main-layout/daily-forecast/daily-forecast.component.scss
+++ b/src/app/components/main-layout/daily-forecast/daily-forecast.component.scss
@@ -209,28 +209,29 @@
   position: absolute;
   background-color: rgba(255, 255, 255, 0.8);
   width: 100%;
-  height: 100%;
+  height: 70%;
   left: 0;
   right: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 100px;
   ::ng-deep .custom-spinner .p-progress-spinner-circle {
-    animation: custom-progress-spinner-color 5s ease-in-out infinite;
+    animation: custom-progress-spinner-color 2s ease-in-out infinite;
   }
   @keyframes custom-progress-spinner-color {
     100%,
     0% {
-      stroke: #7847a1;
+      stroke: #ff7a00;
     }
     40% {
-      stroke: #7847a194;
+      stroke: rgba(64, 46, 50, 0.5);
     }
     66% {
-      stroke: #dcbef5;
+      stroke: rgba(255, 123, 0, 0.5)
     }
     90% {
-      stroke: #9b5ccf;
+      stroke: #402e32;
     }
   }
 }
